versioned_docs/version-2.8.0/community-projects/index.md
# Projects

An index of projects created by the Zaparoo community. We love seeing what people create - if you've made something cool with Zaparoo, please share it! You can submit your project by opening a pull request to add it to this list, or by sharing it on our Discord or Reddit communities.

Projects can be anything from 3D printed cases to custom tokens, software integrations, or creative ways to use Zaparoo. Even if you think it's simple, others may find it useful or inspiring!

## Custom Cases

- **[Mister FPGA Wedge Case with TapTo for Keychron K8](https://www.printables.com/model/964115-mister-fpga-wedge-case-with-tapto-for-keychron-k8)** by *Andrés del Campo Novales*

  A wedge case for the Mister FPGA with Zaparoo for the Keychron K8 keyboard.

- **[MiSTer FPGA Case with TapTo Slot and Drive Tray](https://makerworld.com/en/models/846344-mister-fgpa-case-with-tapto-slot-and-drive-tray)** by *TBone_427120*

  MiSTer FPGA case variation with integrated TapTo slot and internal drive tray.

- **[NFC 1541 V2](https://makerworld.com/en/models/1670375-nfc-1541-v2)** by *Ninja3DP*

  Commodore 1541 floppy disk drive inspired case for PN532 NFC readers. Compatible with ZapPad and RetroRemake NFC reader.
  - **[Card Insert Stabilizer](https://www.printables.com/model/1306895-card-insert-stabilizer-for-tapto-nfc-1541)** by *The Opponent*

    Addon that replaces bottom joists to guide cards into the slot.
  - **[Tandy Remix](https://www.printables.com/model/804654-tandy-remix-of-tapto-nfc-1541)** by *RayneX*

    1541 case with added Tandy logo to look like DOS-era floppy drive.
  - **[TapTo 1541 Sled](https://www.printables.com/model/970069-tapto-1541-sled)** by *BLuR42*

    Internal sled to mount TapTo USB-C Style Shell inside 1541 case.

- **[NFC-Engine V2](https://makerworld.com/en/models/1542524-nfc-engine-v2)** by *Ninja3DP*

  PC-Engine inspired case for PN532 NFC readers. Compatible with ZapPad and RetroRemake NFC reader.

- **[Retro NFC reader for NFC cards and Carts](https://makerworld.com/en/models/1963134-retro-nfc-reader-for-nfc-cards-and-carts)** by *SunieFairbreeze*

  All-in-one case for PN532 USB NFC Reader with retro video game-style carts (holds 25mm NFC tags) and cassette case insert. Includes label templates.

- **[Super Zap Boy](./super-zap-boy.md)** by *Phoenix*

  A custom [MiSTer FPGA](../platforms/mister/index.md) case project using an original Super Nintendo, Super GameBoy and reproduction GameBoy cartridges with custom made labels.

- **[TapTo Card Reader With Spring Loaded Ejection Button](https://www.printables.com/model/999381-tapto-card-reader-with-spring-loaded-ejection-butt)** by *Raspberry1337*

  Floppy disk style with satisfying click and functional eject button. Originally designed by EntirelyTom.

- **[TapTo NFC Consolized dock for Mister Pi case](https://www.printables.com/model/1007354-tapto-nfc-consolized-dock-for-mister-pi-case)** by *NightGecko*

  Dock attachment for RetroFrog-based MiSTer console.

- **[TapTo PN532 V2 NFC Reader Case](https://www.printables.com/model/896333-tapto-pn532-v2-nfc-reader-case)** by *Blazewind*

  Remixed case for generic PN532 V2 NFC Reader.

- **[TapTo Reader Case (PN532)](https://www.thingiverse.com/thing:6721541)** by *JPRanger18*

  A custom case for the PN532 module and an off the shelf USB to UART (TTL) adapter.

- **[TapTo USB-C Style Shell](https://www.printables.com/model/970108-tapto-usb-c-style-shell)** by *BLuR42*

  A custom case for the TapTo DIY Reader, adjusted for the USB-C adapter variant.

- **[Zaploader V2](https://makerworld.com/en/models/1695030-zaploader-v2)** by *Ninja3DP*

  NFC cart reader for SNES (PAL/JAP) carts and NFC cards. Supports ZapPad and USB-C NFC readers.
  - **[Famicom/Mega Drive/Master System Adapter](https://makerworld.com/en/models/1700855-zaploader-fam-md-ms-adapter)**

    Adapter for Famicom, Mega Drive, and Master System cartridges
  - **[Game Boy Adapter](https://makerworld.com/en/models/1700887-zaploader-game-boy-adapter)**

    Adapter for Game Boy cartridges
  - **[Game Gear Adapter](https://makerworld.com/en/models/1700896-zaploader-game-gear-adapter)**

    Adapter for Game Gear cartridges
  - **[N64 Adapter](https://makerworld.com/en/models/1700838-zaploader-n64-adapter)**

    Adapter for N64 cartridges
  - **[NES Adapter](https://makerworld.com/en/models/1700876-zaploader-nes-adapter)**

    Adapter for NES cartridges

- **[Zaparoo (TapTo) NFC Cart/Card Reader](https://makerworld.com/en/models/1417537-zaparoo-tapto-nfc-cart-card-reader-mister-fpga)** by *psybertech*

  Simple reader that holds USB NFC reader, reads both cartridges and standard cards. Includes optional riser to hide USB cable.

- **[Zaparoo NFC Reader - Atari-homage version v20](https://makerworld.com/en/models/1536546-zaparoo-nfc-reader-atari-homage-version-v20)** by *psybertech*

  Atari 2600-inspired design. Supports both carts and standard NFC cards with optional sled for USB NFC reader.

- **[Zaparoo/TapTo for MiSTer FPGA add-on enclosure](https://www.printables.com/model/1140054-zaparootapto-for-mister-fpga-add-on-enclosure)** by *Retro Frog*

  Mounts to bottom of MiSTer stack with M3 screws. For PN532 NFC board.

## Software Tools

- **[ZaparooSkraper](https://github.com/AchillesPDX/ZaparooSkraper)** by *AchillesPDX*

  A custom Mix for Skraper to generate Zaparoo NFC labels. Features controller illustrations from the RetroPie es-theme-carbon project and professionally redrawn console logos from the Console Logos archive.

- **[zaparoo-helpers](https://github.com/thwonp/zaparoo-helpers)** by *Thwonp*

  Bash scripts for composing and printing custom Zaparoo cards. Includes `imagemagick_composer.sh` for batch image composition (combining cover art and marquees with templates) and `print_composer.sh` for arranging cards into print-ready 8.5x11" pages at 300 DPI.

## Tokens

### Storage

- **[NFC Card Case - Full back](https://makerworld.com/en/models/598032)** by *TheTrain*

  This is a card case for NFC cards that are 3.375" x 2.125".

- **[NFC Card Case with TapTo Logo](https://www.printables.com/model/1045987-nfc-card-case-with-tapto-logo)** by *BLuR42*

  Remix of TheTrain's card case with embossed/colored TapTo logo.

- **[TapTo Card Stand/Holder](https://www.thingiverse.com/thing:6723128)** by *JPRanger18*

  Simple stand for some credit card sized TapTo NFC Game Cards. Fits 20-25 cards.

- **[TapTo NFC Card Storage Box & Separator Cards](https://makerworld.com/en/models/584450)** by *Raspberry1337*

  Storage box for larger number of standard size NFC cards, plus printable divider cards with example logos.

### Custom Tokens

- **[54mm Floppy Disks](https://www.printables.com/model/805885-54mm-floppy-disk-for-tapto-nfc-1541)** by *iZero*

  3D printed floppy disks for use with the TapTo NFC 1541 case.

- **[Zaparoo(TapTo) Retro Game Cartridges/Carts NFC](https://makerworld.com/en/models/1417529-zaparoo-tapto-retro-game-cartridges-carts-nfc)** by *psybertech*

  Multiple cart styles: NES, SNES, N64, GB, Atari 2600, 3.5" floppy, CD/DVD, custom cart. Uses 1" (25mm) circular NFC tags. Includes organizers and label size guide.
